syntax = "proto3";

package pb;

option go_package = "node/pb";


enum NodeType {
    Full = 0;
    Light = 1;
}

message NodeInfo {
    NodeType nodeType = 2;
}

